<resources>
    <string name="app_name">EventBox</string>
    <string name="title_activity_home_side_bar">HomeSideBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Region Preferences -->
    <string name="current_location_title">Current location access</string>
    <string name="region_title">Download incoming attachments</string>


    <!-- Font size Preferences -->
    <string-array name="theme_names">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="theme_values">
        <item>light</item>
        <item>dark</item>
    </string-array>

    <!-- Theme Preferences -->
    <string name="theme_preference_key">theme_preference</string>


    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Settings">settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_plan_event">Before</string>
    <string name="title_take_picture">During</string>
    <string name="title_view_events">After</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="example_email_com">example@email.com</string>
    <string name="your_password">Your password</string>
    <string name="login">Login</string>
    <string name="remind_me">Remind me</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="eventbox">EventBox</string>
    <string name="join_us">Join us!</string>
    <string name="menu_profile">Profile</string>
    <string name="Change_password">Change password</string>
    <string name="Refresh_events">REFRESH EVENTS</string>
    <string name="Add_Event">ADD EVENT</string>
    <string name="Add_Note">ADD NOTE</string>
    <string name="Refresh_Notes">REFRESH NOTES</string>
    <string name="Notes">Notes</string>
    <string name="nav_notes">Notes</string>

    <string name="name_of_the_event">Name of the event</string>
    <string name="date_of_the_event">Date of the event</string>
    <string name="description_of_the_event">Description of the event</string>
    <string name="location_of_the_event">Location of the event</string>
    <string name="your_user_name">Your username</string>
    <string name="set">SET</string>
    <string name="cancel">CANCEL</string>
    <string name="info_after">Set alarms so you don\'t forget to share your event experience</string>
    <string name="selected_image">Selected image</string>

</resources>