<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Account settings">

        <EditTextPreference
            app:key="email"
            app:title="Email"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="password"
            app:title="Change password"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Notification settings">

        <SwitchPreference
            android:defaultValue="false"
            android:key="notifications"
            android:title="Allow notifications" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Language and regional settings">

        <SwitchPreference
            android:defaultValue="false"
            android:key="current_location"
            android:title="Disable access to current location" />
        <EditTextPreference
            app:dependency="current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="region"
            app:title="Region"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Appearance">
        <ListPreference
            android:key="theme_preference"
            android:title="Theme"
            android:summary="Select the app theme"
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_values"
            android:defaultValue="0"
            android:dialogTitle="Select Theme"/>
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>