<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="wrap_content"
        android:layout_height="164dp"
        android:src="@drawable/logo"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8sp"
        android:text="@string/eventbox"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="48sp"
        android:translationY="-50dp"
        android:typeface="normal" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8sp"
        android:text="@string/join_us"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:translationY="30dp"
        android:typeface="normal" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:alpha="1"
        android:background="@drawable/rounded_box"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#303030"
        android:textStyle="italic"
        android:translationY="50dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:alpha="1"
        android:background="@drawable/rounded_box"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#303030"
        android:textStyle="italic"
        android:translationY="50dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:alpha="1"
        android:background="@drawable/rounded_box"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#303030"
        android:textStyle="italic"
        android:translationY="50dp" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/light_grey"
        android:backgroundTintMode="src_atop"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:translationY="50dp" />

</LinearLayout>
